test/corpus/expressions.txt
===================
conditional
===================

if (true) {
  a = 1;
}

---

(module
  (keyword) (literal (bool)) (block
    (attribute (identifier)) (operator) (literal (integer))
  )
)


===================
unsafe cast
===================

cast x;

---

(module (keyword) (attribute (identifier)))

===================
safe cast
===================

cast (x, Type);

---

(module (keyword) (attribute (identifier)) (type (identifier)))


===================
runtime type check
===================

(x : Type);

---

(module (attribute (identifier)) (type (identifier)))


===================
preprocessor macro
===================

#if !condition
trace(x);
#elseif (condition > 2)
trace(y);
#else
trace(z);
#end

---

(module
  (preprocessor_statement (operator) (identifier))
  (call (attribute (identifier)) (attribute (identifier)))
  (preprocessor_statement (identifier) (operator) (literal (integer)))
  (call (attribute (identifier)) (attribute (identifier)))
  (preprocessor_statement)
  (call (attribute (identifier)) (attribute (identifier)))
  (preprocessor_statement)
)
