test/corpus/import.txt
===================
import statement
===================

import somePackage;

---

(module (import_statement (keyword) (attribute (identifier))))

===================
import statement with path
===================

import my.other.package;

---

(module
  (import_statement (keyword)
    (attribute
      (attribute
        (attribute (identifier))
      (identifier))
    (identifier))
  )
)

===================
multiple import statements
===================

import banana;
import banana.bread;
import banana.bread.pecan;

---

(module
(import_statement (keyword) (attribute (identifier)))
(import_statement (keyword) (attribute (attribute (identifier)) (identifier)))
(import_statement (keyword) (attribute (attribute (attribute (identifier)) (identifier)) (identifier)))
)
