test/corpus/unary_operations.txt
===================
increment unop postfix
===================

class main {
  function test() {
    x++;
  }
}

---
(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier)
        (block
          (attribute (identifier)) (operator)
        )
      )
    )
  )
)

===================
increment unop prefix
===================

class main {
  function test() {
    ++x;
  }
}

---
(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier)
        (block
          (operator) (attribute (identifier))
        )
      )
    )
  )
)

===================
decrement_unop postfix
===================

class main {
  function test() {
    x--;
  }
}

---
(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier)
        (block
          (attribute (identifier)) (operator)
        )
      )
    )
  )
)


===================
decrement_unop prefix
===================

class main {
  function test() {
    --x;
  }
}

---
(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier)
        (block
           (operator) (attribute (identifier))
        )
      )
    )
  )
)

===================
logical not unop
===================

class main {
  function test() {
    !x;
  }
}

---
(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier)
        (block
           (operator) (attribute (identifier))
        )
      )
    )
  )
)

===================
negative unop
===================

class main {
  function test() {
    -x;
  }
}

---
(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier)
        (block
           (operator) (attribute (identifier))
        )
      )
    )
  )
)

===================
bitwise_negative_unop
===================

class main {
  function test() {
    ~x;
  }
}

---
(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier)
        (block
           (operator) (attribute (identifier))
        )
      )
    )
  )
)
